BUG FIX: fixed profile background issue on mobile

--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -7,7 +7,7 @@
   background: #121212;
   position: relative;
   padding-top: 15vh;
-  height: 100vh;
+  height: 100%;
   width: 80vw;
   margin: 0 auto; }
   .profile .header {
